collapse.show fix

--- a/css/style.css
+++ b/css/style.css
@@ -52,10 +52,6 @@ body {
     opacity: 85%;
 }
 
-.collapse.show {
-    text-align: center;
-}
-
 #countdown {
     color: #ffffff;
     font-size: 20px;
@@ -436,11 +432,6 @@ a {
       
 }
 
-.collapse.show {
-    transform: translate(20px);
-    text-align: center;
-}
-
 @media (min-width: 600px) {
     .Logo {
         width: 300px;
@@ -470,19 +461,12 @@ a {
         font-size: 10px;
     }
 
-    .Owner {
-        text-align: center;
-        font-family: 'Press Start 2P', cursive;
-    }
-
     .Owner img {
         width: 293px;
     }
 
     .Term2 {
-        min-height: 100vh;
         font-size: 20px;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 
     .TeraByteNFTs {
